# hecate

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
include/: CMakeLists.txt  Component.h  ComponentType.h  ComponentTypeManager.h  DelayedEntityProcessingSystem.h  Entity.h  EntityManager.h  EntityProcessingSystem.h  EntitySystem.h  GroupManager.h  IntervalEntitySystem.h  SystemBitManager.h  SystemManager.h  TagManager.h  World.h
include/hecate/: Bag.h  Component.h  ComponentMapper.h  ComponentType.h  ComponentTypeManager.h  DelayedEntityProcessingSystem.h  DelayedEntitySystem.h  Entity.h  EntityManager.h  EntityProcessingSystem.h  EntitySystem.h  GroupManager.h  IntervalEntityProcessingSystem.h  IntervalEntitySystem.h  SystemBitManager.h  SystemManager.h  TagManager.h  Types.h  World.h  hecate.h
src/: CMakeLists.txt  Component.cpp  ComponentMapper.cpp  ComponentType.cpp  ComponentTypeManager.cpp  DelayedEntityProcessingSystem.cpp  DelayedEntitySystem.cpp  Entity.cpp  EntityManager.cpp  EntityProcessingSystem.cpp  EntitySystem.cpp  GroupManager.cpp  IntervalEntityProcessingSystem.cpp  IntervalEntitySystem.cpp  SystemBitManager.cpp  SystemManager.cpp  TagManager.cpp  World.cpp
src/utils/: CMakeLists.txt
test/: CMakeLists.txt  testBag.cpp  testComponentMapper.cpp  testGroupManager.cpp  testRunner.cpp  testWorld.cpp
